some more quick fixes
Signed-off-by: illyrius666 <fitimq@live.nl>