@@ -27,7 +27,6 @@ import org.bukkit.entity.Player;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class PlayerHandler implements DecreeParameterHandler<Player> {
     @Override
@@ -48,7 +47,7 @@ public class PlayerHandler implements DecreeParameterHandler<Player> {
             throw new DecreeParsingException("Unable to find Player \"" + in + "\"");
         }
         try {
-            return options.stream().filter((i) -> toString(i).equalsIgnoreCase(in)).collect(Collectors.toList()).get(0);
+            return options.stream().filter((i) -> toString(i).equalsIgnoreCase(in)).toList().get(0);
         } catch (Throwable e) {
             throw new DecreeParsingException("Unable to filter which Biome \"" + in + "\"");
         }
